--- a/index.html
+++ b/index.html
@@ -79,13 +79,19 @@
           </div>
         </div>
         <div class="col-lg-6">
-            <button type="submit" class="btn btn-primary" id="realizar-compra">Realizar compra</button>
+            <button type="submit" class="btn btn-primary" id="realizar-compra">Ver el carrito</button>
+            <div id="carrito" class="card w-100" style="display:none;">
+              <div class="card-body">
+                <h5 class="card-title">Mi Carrito</h5>
+                <ul id="lista-carrito" class="list-group"></ul>
+                <button id="vaciar-carrito" class="btn btn-danger mt-3">Vaciar Carrito</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <script src="./js/productos.js"></script>
-    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
