--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </header><!-- fin de encabezado -->
     <div class="container">
-      <h1 class="text-center">Simulador de creación de artículos</h1>
+      <h1 class="text-center">Creacion de Productos y carrito de compra</h1>
       <div class="row">
         <div class="col-lg-6">
           <form>
@@ -87,6 +87,7 @@
                   <th>Producto</th>
                   <th>Precio</th>
                   <th>Cantidad</th>
+                  <th>Total</th>
                 </tr>
               </thead>
               <tbody id="tabla-carrito">
@@ -101,8 +102,16 @@
         </div>
       </div>
     </div>
+    <footer class="main-footer mt-1 position-fixed top-100 start-50 translate-middle">
+      <nav>
+              <ul >
+                  <li><a href="#">Grupo de FB</a></li>
+                  <li><a href="#">Instagram</a>  
+              </ul> 
+  
+          </nav>
+    </footer>
     <script src="./js/productos.js"></script>
-    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
