Se adiciona boton de quitar producto al carrito y un funcionalidad al boton de comprar

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </table>
             <p>Total de la compra: <span id="total-compra">$0.00</span></p>
             <button type="button" class="btn btn-danger" id="limpiar-carrito">Limpiar carrito</button>
-            <a href="#" class="btn btn-info">Pagar</a>
+            <a href="#" id="pagar" class="btn btn-info">Pagar</a>
           </div>
         </div>
         </div>
